--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, 
+    maxiumum-scale=1">
+    <title>CIT 261 Assignment Portal | Jessica Ingebrigtsen | BYU-Idaho</title>
+    <meta name="description" content="Assignemnt homepage for CIT230">
+    <link rel="stylesheet" href="styles/main.css">
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <img src="images/profile-picture.jpg" alt="My Profile Picture">
+        <h1>Jessica Ingebrigtsen</h1>
+    </header>
+    <nav>
+    </nav>
+    <main>
+        <h2>CIT 230-Assignment Portal</h2>
+        <ul>
+            <li>Javascript: <a href="basicjava.html">Loops, Conditional Statements, Functions, Arrays</a></li>
+        </ul>
+    </main>
+    <footer>
+        <p>&copy; | Jessica Ingebrigtsen | Oregon | <a href="http://www.byui.edu/online/">BYU Online Learning</a></p>
+    </footer>
 </body>
+
 </html>
