--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     maxiumum-scale=1">
     <title>CIT 261 Assignment Portal | Jessica Ingebrigtsen | BYU-Idaho</title>
     <meta name="description" content="Assignemnt homepage for CIT230">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -18,9 +18,9 @@
     <nav>
     </nav>
     <main>
-        <h2>CIT 230-Assignment Portal</h2>
+        <h2>CIT 261-Assignment Portal</h2>
         <ul>
-            <li>Javascript: <a href="basicjava.html">Loops, Conditional Statements, Functions, Arrays</a></li>
+            <li>Javascript: <a href="javafluencyloops/basicjava.html">Loops, Conditional Statements, Functions, Arrays</a></li>
         </ul>
     </main>
     <footer>
