--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, 
     maxiumum-scale=1">
     <title>CIT 261 Assignment Portal | Jessica Ingebrigtsen | BYU-Idaho</title>
-    <meta name="description" content="Assignemnt homepage for CIT230">
+    <meta name="homepage" content="Assignmentt homepage for CIT230">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -20,7 +20,7 @@
     <main>
         <h2>CIT 261-Assignment Portal</h2>
         <ul>
-            <li>Javascript: <a href="javafluencyloops/basicjava.html">Loops, Conditional Statements, Functions, Arrays</a></li>
+            <li>Javascript: <a href="jsfluencyloops/basicjs.html">Loops, Conditional Statements, Functions, Arrays</a></li>
         </ul>
     </main>
     <footer>
