date function and style

--- a/jsfluencyloops/basicjs.html
+++ b/jsfluencyloops/basicjs.html
@@ -8,13 +8,21 @@
     <title>Basic JavaScript Skills</title>
     <meta name="javascript Skills" content="Basic JavaScript Skills">
     <link rel="stylesheet" href="styles/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower%7cLobster" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700%7cDancing+Script" rel="stylesheet">
 </head>
+
 <body>
-<div class="container">
-<h1>JavaScript Basic Skills</h1>
-<span id="currentDate"></span>
-</div>
-<script src="scripts/currentDate.js"></script>
+    <div class="container">
+        <h1>JavaScript Basic Skills</h1>
+        <div id="today">
+            <h2>Today's date is: </h2>
+           <p><span id="currentDay"></span></p>
+           <p><span id="currentDate"></span></p>
+        </div>
+        <!--today-->
+    </div>
+    <!--container-->
+    <script src="scripts/currentDate.js"></script>
 </body>
+
 </html>
