--- a/jsfluencyloops/basicjs.html
+++ b/jsfluencyloops/basicjs.html
@@ -16,13 +16,25 @@
         <h1>JavaScript Basic Skills</h1>
         <div id="today">
             <h2>Today's date is: </h2>
-           <p><span id="currentDay"></span></p>
-           <p><span id="currentDate"></span></p>
+            <p><span id="currentDay"></span></p>
+            <p><span id="currentDate"></span></p>
         </div>
         <!--today-->
-    </div>
+        <div class="menu">
+            <ul class="dropdown">
+            <button onclick="dropFunction()" class="dropbtn">Dropdown Menu</button>
+            <div id="myDropdown" class="dropdown-content">
+               <li><a href="#">Option 1</a></li> 
+               <li><a href="#">Option 2</a></li>
+               <li><a href="#">Option 3</a></li>
+            </div>
+            </ul>
+        </div>
+        <!--dropdown-->
+    </div>>
     <!--container-->
     <script src="scripts/currentDate.js"></script>
+    <script src="scripts/dropdown.js"></script>
 </body>
 
 </html>
