Update Index Page and JS Basics

--- a/index.html
+++ b/index.html
@@ -5,27 +5,31 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, 
     maxiumum-scale=1">
-    <title>CIT 261 Assignment Portal | Jessica Ingebrigtsen | BYU-Idaho</title>
-    <meta name="homepage" content="Assignmentt homepage for CIT230">
+    <title>CIT 261 Fluency</title>
+    <meta name="homepage" content="Assignment homepage for CIT230">
     <link rel="stylesheet" href="styles/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700%7cShadows+Into+Light%7cDancing+Script%7cNoticia+Text"
+        rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <img src="images/profile-picture.jpg" alt="My Profile Picture">
-        <h1>Jessica Ingebrigtsen</h1>
-    </header>
-    <nav>
-    </nav>
-    <main>
-        <h2>CIT 261-Assignment Portal</h2>
-        <ul>
-            <li>Javascript: <a href="jsfluencyloops/basicjs.html">Loops, Conditional Statements, Functions, Arrays</a></li>
-        </ul>
-    </main>
-    <footer>
-        <p>&copy; | Jessica Ingebrigtsen | Oregon | <a href="http://www.byui.edu/online/">BYU Online Learning</a></p>
-    </footer>
+    <div class="container">
+
+        <h1>Jessica Ingebrigtsen - CIT-261</h1>
+        <h2>JavaScript Mobile Application Development Fluency</h2>
+        <div class="topic1 topics">
+            <h3>1 </h3>
+            <p>Loops, Conditional Statements, Functions, Arrays</p>
+            <button><a href="jsfluencyloops/basicjs.html">Example
+                    Page</a></button>
+            <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsfluencyloops">Example
+                Code</a></button>
+        </div>
+        <div class="topic2 topics">
+            <h3>2</h3>
+        </div>
+        </main>
+    </div>
 </body>
 
 </html>
