--- a/jsfluencyloops/basicjs.html
+++ b/jsfluencyloops/basicjs.html
@@ -20,6 +20,7 @@
             <h2>Today's date is: </h2>
             <p><span id="currentDay"></span></p>
             <p><span id="currentDate"></span></p>
+            <p class="topic">This Demonstrates Arrays</p>
         </div>
         <!--today-->
         <!--Demonstrates a Function-->
@@ -32,6 +33,7 @@
                     <li><a href="#">Option 3</a></li>
                 </div>
             </ul>
+            <p class="topic">This Demonstrates JS Functions</p>
         </div>
         <!--menu-->
         <!--Demonstrates Conditionals and Parameters-->
@@ -41,6 +43,7 @@
             <p> Enter your guess here: <input type="text" size="5px" name="guess" id="guess"></p>
             <button onclick="numberFunction(document.getElementById('guess').value)" class="numberbtn">Check</button>
             <p id="results"></p>
+            <p class="topic"> This Demonstrates Conditionals and Function Parameters</p>
         </div>
         <!--guessing-->
         <!--Demonstrates Loops and Sorting-->
@@ -64,6 +67,7 @@
                     Turtle
                 </p>
                 <button onclick="sortFunction()" class="animalbtn">Sort</button>
+                <p class="topic">This Demonstrates Loops</p>
             </div>
             <!--info-->
             <div class="mammals animalSort">
