update home page link

--- a/jsfluencyloops/basicjs.html
+++ b/jsfluencyloops/basicjs.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="container">
-            <h1><a href="ingebrigtsen-jessica.github.io/index.html">JavaScript Basic Skills</a></h1>
+            <h1><a href="https://ingebrigtsen-jessica.github.io/index.html">JavaScript Basic Skills</a></h1>
         <!--Demonstrates Arrays-->
         <div id="today">
             <h2>Today's date is: </h2>
