Setup new page on index

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         </div>
         <div class="topic2 topics">
             <h3>2</h3>
+            <p>Object Creation Functions, Inheritance, Properties, Methods, Instantiation</p>
+            <button><a href="jsfluencyobjects/jsobjects.html">Example
+                    Page</a></button>
+            <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsobjects">Example
+                Code</a></button>
         </div>
         </main>
     </div>
