set up JS objects page

--- a/jsfluencyobjects/jsobjects.html
+++ b/jsfluencyobjects/jsobjects.html
@@ -13,5 +13,8 @@
 </head>
 <body>
 
+    <div class="container">
+            <h1><a href="https://ingebrigtsen-jessica.github.io/index.html">JavaScript Objects</a></h1>
+    </div>
 </body>
 </html>
