--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
             <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsobjects">Example
                 Code</a></button>
         </div>
+        <div class="topic3 topics">
+                <h3>3</h3>
+                <p>Object Creation Functions, Inheritance, Properties, Methods, Instantiation</p>
+                <button><a href="jsfluencyobjects/jsobjects.html">Example
+                        Page</a></button>
+                <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsobjects">Example
+                    Code</a></button>
+            </div>
         </main>
     </div>
 </body>
