json link updatre

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p>Object Creation Functions, Inheritance, Properties, Methods, Instantiation</p>
                 <button><a href="jsfluencyobjects/jsobjects.html">Example
                         Page</a></button>
-                <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsobjects">Example
+                <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/json">Example
                     Code</a></button>
             </div>
         </main>
