--- a/index.html
+++ b/index.html
@@ -36,12 +36,11 @@
         <div class="topic3 topics">
                 <h3>3</h3>
                 <p>Object Creation Functions, Inheritance, Properties, Methods, Instantiation</p>
-                <button><a href="jsfluencyobjects/jsobjects.html">Example
+                <button><a href="jsonparse/json.html">Example
                         Page</a></button>
-                <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/json">Example
+                <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsonparse">Example
                     Code</a></button>
             </div>
-        </main>
     </div>
 </body>
 
