--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, 
-    maxiumum-scale=1">
+    maximum-scale=1">
     <title>CIT 261 Fluency</title>
     <meta name="homepage" content="Assignment homepage for CIT230">
     <link rel="stylesheet" href="styles/styles.css">
