--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <button><a href="jsfluencyloops/basicjs.html">Example
                     Page</a></button>
             <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsfluencyloops">Example
-                Code</a></button>
+                    Code</a></button>
         </div>
         <div class="topic2 topics">
             <h3>2</h3>
@@ -31,16 +31,24 @@
             <button><a href="jsfluencyobjects/jsobjects.html">Example
                     Page</a></button>
             <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsobjects">Example
-                Code</a></button>
+                    Code</a></button>
         </div>
         <div class="topic3 topics">
-                <h3>3</h3>
-                <p>Object Creation Functions, Inheritance, Properties, Methods, Instantiation</p>
-                <button><a href="jsonparse/json.html">Example
-                        Page</a></button>
-                <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsonparse">Example
+            <h3>3</h3>
+            <p>JSON Parse & Stringify</p>
+            <button><a href="jsonparse/json.html">Example
+                    Page</a></button>
+            <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsonparse">Example
                     Code</a></button>
-            </div>
+        </div>
+        <div class="topic4 topics">
+            <h3>4</h3>
+            <p>Consume JSON with an XMLHTTP request</p>
+            <button><a href="jsonparse/json.html">Example
+                    Page</a></button>
+            <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsonparse">Example
+                    Code</a></button>
+        </div>
     </div>
 </body>
 
