page setup topic 4

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <div class="topic4 topics">
             <h3>4</h3>
             <p>Consume JSON with an XMLHTTP request</p>
-            <button><a href="jsonparse/json.html">Example
+            <button><a href="consumejson/consumejson.html">Example
                     Page</a></button>
-            <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsonparse">Example
+            <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/consumejson">Example
                     Code</a></button>
         </div>
     </div>
