--- a/consumejson/consumejson.html
+++ b/consumejson/consumejson.html
@@ -11,11 +11,29 @@
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700%7cShadows+Into+Light%7cDancing+Script%7cNoticia+Text"
         rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
-    <h1><a href="https://ingebrigtsen-jessica.github.io/index.html">Consume JSON via XMLHTTP request</a></h1>
+        <h1><a href="https://ingebrigtsen-jessica.github.io/index.html">Consume JSON via XMLHTTP request</a></h1>
+        <div class="townSelect">
+            <h2>Town Selection</h2>
+            <p>Johnny lives in Salem, Oregon. He is thinking about visiting the Mountains (Sisters) or perhaps the
+                Coast (Seaside)</p></br>
+            <p>He's decided he wants to go where it is warmest, even if that means staying put.</p>
+            <p>Let's check the weather: </p>
+            <select name="towns" onchange="checkWeather(this.value)">
+                <option value="salem">Salem</option>
+                <option value="sisters">Sisters</option>
+                <option value="seaside">Seaside</option>
+            </select><br>
+        </div>
+        <div class="townDisplay">
 
-    </div><!--container-->
+        </div>
+
+    </div>
+    <!--container-->
     <script src="scripts/weather.js"></script>
 </body>
+
 </html>
