Adding in DOM stuff

--- a/index.html
+++ b/index.html
@@ -2,54 +2,70 @@
 <html lang="en-US">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, 
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, 
     maximum-scale=1">
-    <title>CIT 261 Fluency</title>
-    <meta name="homepage" content="Assignment homepage for CIT230">
-    <link rel="stylesheet" href="styles/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700%7cShadows+Into+Light%7cDancing+Script%7cNoticia+Text"
-        rel="stylesheet">
+        <title>CIT 261 Fluency</title>
+        <meta name="homepage" content="Assignment homepage for CIT230">
+        <link rel="stylesheet" href="styles/styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700%7cShadows+Into+Light%7cDancing+Script%7cNoticia+Text"
+                rel="stylesheet">
 </head>
 
 <body>
-    <div class="container">
+        <div class="container">
 
-        <h1>Jessica Ingebrigtsen - CIT-261</h1>
-        <h2>JavaScript Mobile Application Development Fluency</h2>
-        <div class="topic1 topics">
-            <h3>1 </h3>
-            <p>Loops, Conditional Statements, Functions, Arrays</p>
-            <button><a href="jsfluencyloops/basicjs.html">Example
-                    Page</a></button>
-            <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsfluencyloops">Example
-                    Code</a></button>
+                <h1>Jessica Ingebrigtsen - CIT-261</h1>
+                <h2>JavaScript Mobile Application Development Fluency</h2>
+                <div class="topic1 topics">
+                        <h3>1 </h3>
+                        <p>Loops, Conditional Statements, Functions, Arrays</p>
+                        <button><a href="jsfluencyloops/basicjs.html">Example
+                                        Page</a></button>
+                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsfluencyloops">Example
+                                        Code</a></button>
+                </div>
+                <div class="topic2 topics">
+                        <h3>2</h3>
+                        <p>Object Creation Functions, Inheritance, Properties, Methods, Instantiation</p>
+                        <button><a href="jsfluencyobjects/jsobjects.html">Example
+                                        Page</a></button>
+                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsobjects">Example
+                                        Code</a></button>
+                </div>
+                <div class="topic3 topics">
+                        <h3>3</h3>
+                        <p>JSON Parse & Stringify </p>
+                        <button><a href="jsonparse/json.html">Example
+                                        Page</a></button>
+                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsonparse">Example
+                                        Code</a></button>
+                </div>
+                <div class="topic4 topics">
+                        <h3>4</h3>
+                        <p>Consume JSON with an XMLHTTP request</p>
+                        <button><a href="consumejson/consumejson.html">Example
+                                        Page</a></button>
+                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/consumejson">Example
+                                        Code</a></button>
+                </div>
+                <div class="topic5 topics">
+                        <h3>5</h3>
+                        <p>Local Storage</p>
+                        <button><a href="#">Example
+                                        Page</a></button>
+                        <button><a href="#">Example
+                                        Code</a></button>
+                </div>
+                <div class="topic6 topics">
+                        <h3>6</h3>
+                        <p>DOM Manipulation</p>
+                        <button><a href="dom/dom.html">Example
+                                        Page</a></button>
+                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/consumejson">Example
+                                        Code</a></button>
+                </div>
         </div>
-        <div class="topic2 topics">
-            <h3>2</h3>
-            <p>Object Creation Functions, Inheritance, Properties, Methods, Instantiation</p>
-            <button><a href="jsfluencyobjects/jsobjects.html">Example
-                    Page</a></button>
-            <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsobjects">Example
-                    Code</a></button>
-        </div>
-        <div class="topic3 topics">
-            <h3>3</h3>
-            <p>JSON Parse & Stringify </p>
-            <button><a href="jsonparse/json.html">Example
-                    Page</a></button>
-            <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/jsonparse">Example
-                    Code</a></button>
-        </div>
-        <div class="topic4 topics">
-            <h3>4</h3>
-            <p>Consume JSON with an XMLHTTP request</p>
-            <button><a href="consumejson/consumejson.html">Example
-                    Page</a></button>
-            <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/consumejson">Example
-                    Code</a></button>
-        </div>
-    </div>
 </body>
 
 </html>
