--- a/dom/dom.html
+++ b/dom/dom.html
@@ -25,80 +25,98 @@
         </div>
         <!--section1-->
         <div class="sections section2">
-            <h2>Tag Name & innerHTML</h2>
-            <p>You can also access an HTML element by the tag name, though it's a bit trickier. Check out my JS code to
-                see what I am doing.</p>
-            <p>Click the button below to change these instructions</p>
-            <button onclick="changetag()" class="innertag">Single Tag</button>
-            <p>Click the button below to change ALL paragraph tags</p>
-            <button onclick="changetags()" class="innertags">All Tags</button>
+            <h2>Tag/Class Name & innerHTML</h2>
+            <p>You can also access an HTML element by the tag or class name, though it's a bit trickier. Check out my
+                JS code to see what I am doing.</p>
+            <div class="tagnames">
+                <h3>Tag Names</h3>
+                <p>Click the button below to change these instructions</p>
+                <button onclick="changetag()" class="innertag">Single Tag</button>
+                <p>Click the button below to change ALL paragraph tags</p>
+                <button onclick="changetags()" class="innertags">All Tags</button>
+            </div>
+            <div class="classnames">
+                <h3 class="classchange">Class Names</h3>
+                <p class="classchange">Now Let's try it by class name:</p>
+                <button onclick="changeclass()">Single Class Element</button>
+                <p class="classchange">Now we will change every element in this class:</p>
+                <button onclick="changeAllClasses()">Change Whole Class</button>
+                <div class="wholediv">
+                    <h3 class="wholediv">Divs & Classes</h3>
+                    <p>Click the button below to see why you probably wouldn't want elements in your div to have the
+                        same class name as the div</p>
+                    <button class="wholediv" id="classbtn" onclick="classdivs()">Class div</button>
 
-        </div>
-        <!--section2-->
-        <div id="combined" class="sections section3">
-            <h2>When Their Powers Combine</h2>
-            <p>You can use getElementById() with getElementsByTagName</p>
-            <p>Click the button below to change only the p elements in this div</p>
-            <button onclick="combinedQueries()">Combine</button>
-            <p>You can also check how many of a certain tag there is within a given id</p>
-            <p>Click below to see how many p elements there are in this section</p>
-            <button onclick="countingPs()">Count Them Up</button>
-            <p id="answer"></p>
+                </div>
 
+            </div>
+            </div>
+            <!--section2-->
+            <div id="combined" class="sections section3">
+                <h2>When Their Powers Combine</h2>
+                <p>You can use getElementById() or getElementsByClass with getElementsByTagName</p>
+
+                <p>Click the button below to change only the p elements in this div</p>
+                <button onclick="combinedQueries()">Combine</button>
+                <p>You can also check how many of a certain tag there is within a given id</p>
+                <p>Click below to see how many p elements there are in this section</p>
+                <button onclick="countingPs()">Count Them Up</button>
+                <p id="answer"></p>
+
+            </div>
+            <!--section3-->
+            <div class="sections section4">
+                <h2>Creating and Appending</h2>
+                <p>JS can also create HTML elements and add them to the page</p>
+                <p>Things to do today:</p>
+                <ul id="todo">
+                    <li>Homework</li>
+                    <li>Run Errands</li>
+                    <li>Take Ashley to Dance</li>
+                </ul>
+                <p>Click the button below to create an element and add it to the list</p>
+                <button onclick="create()">Add Item</button>
+            </div>
+            <!--section4-->
+            <div class="sections section5">
+                <h2>Inserting new Elements</h2>
+                <p>Perhaps I need my new item higher up on the list, so I make sure to get to it</p>
+                <p>Things to do today:</p>
+                <ul id="todo2">
+                    <li>Homework</li>
+                    <li>Run Errands</li>
+                    <li>Take Ashley to Dance</li>
+                </ul>
+                <p>Click the button below to create an element and insert it to the list</p>
+                <button onclick="insert()">Insert Item</button>
+            </div>
+            <!--section5-->
+            <div class="sections section6">
+                <h2>Removing Elements</h2>
+                <p>When I finish something, I need to remove it from the list</p>
+                <p>Things to do today:</p>
+                <ul id="todo3">
+                    <li>Homework</li>
+                    <li>Laundry</li>
+                    <li>Run Errands</li>
+                    <li>Take Ashley to Dance</li>
+                </ul>
+                <p>If I am working from the top -> down, I can remove the items by pushing this button:</p>
+                <button onclick="checkoff(1)">Remove Top Item</button>
+                <p>Or how about the bottom -> up?</p>
+                <button onclick="checkoff(2)">Remove Bottom Item</button>
+                <p>If instead I want to choose which item to cross off try this:</p>
+                <p>Which item would you like to remove? <input type="text" name="remove" id="remove" size="5"></p>
+                <p>Click the button below to remove the requested item from the list</p>
+                <button onclick="remove(document.getElementById('remove').value)">Remove Item</button>
+            </div>
+            <!--section6-->
         </div>
-        <!--section3-->
-        <div class="sections section4">
-            <h2>Creating and Appending</h2>
-            <p>JS can also create HTML elements and add them to the page</p>
-            <p>Things to do today:</p>
-            <ul id="todo">
-                <li>Homework</li>
-                <li>Run Errands</li>
-                <li>Take Ashley to Dance</li>
-            </ul>
-            <p>Click the button below to create an element and add it to the list</p>
-            <button onclick="create()">Add Item</button>
-        </div>
-        <!--section4-->
-        <div class="sections section5">
-            <h2>Inserting new Elements</h2>
-            <p>Perhaps I need my new item higher up on the list, so I make sure to get to it</p>
-            <p>Things to do today:</p>
-            <ul id="todo2">
-                <li>Homework</li>
-                <li>Run Errands</li>
-                <li>Take Ashley to Dance</li>
-            </ul>
-            <p>Click the button below to create an element and insert it to the list</p>
-            <button onclick="insert()">Insert Item</button>
-        </div>
-        <!--section5-->
-        <div class="sections section6">
-            <h2>Removing Elements</h2>
-            <p>When I finish something, I need to remove it from the list</p>
-            <p>Things to do today:</p>
-            <ul id="todo3">
-                <li>Homework</li>
-                <li>Laundry</li>
-                <li>Run Errands</li>
-                <li>Take Ashley to Dance</li>
-            </ul>
-            <p>If I am working from the top -> down, I can remove the items by pushing this button:</p>
-            <button onclick="checkoff(1)">Remove Top Item</button>
-            <p>Or how about the bottom -> up?</p>
-            <button onclick="checkoff(2)">Remove Bottom Item</button>
-            <p>If instead I want to choose which item to cross off try this:</p>
-            <p>Which item would you like to remove?  <input type="text" name="remove" id="remove" size="5"></p>
-            <p>Click the button below to remove the requested item from the list</p>
-            <button onclick="remove(document.getElementById('remove').value)">Remove Item</button>
-        </div>
-        <!--section6-->
-    </div>
-    <!--container-->
-    <script src="scripts/innerHTML.js"></script>
-    <script src="scripts/changetags.js"></script>
-    <script src="scripts/createappend.js"></script>
-    <script src="scripts/deletingelements.js"></script>
+        <!--container-->
+        <script src="scripts/innerHTML.js"></script>
+        <script src="scripts/changetags.js"></script>
+        <script src="scripts/createappend.js"></script>
+        <script src="scripts/deletingelements.js"></script>
 
 </body>
 
