--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 <div class="topic5 topics">
                         <h3>5</h3>
                         <p>Local Storage</p>
-                        <button><a href="#">Example
+                        <button><a href="#">Not Yet
                                         Page</a></button>
-                        <button><a href="#">Example
+                        <button><a href="#">Not Yet
                                         Code</a></button>
                 </div>
                 <div class="topic6 topics">
