set up local storage

--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
                         <p>DOM Manipulation</p>
                         <button><a href="dom/dom.html">Example
                                         Page</a></button>
-                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/dom"> Example
+                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/dom">
+                                        Example
                                         Code</a></button>
                 </div>
+                
         </div>
 </body>
 
