--- a/localstorage/localstorage.html
+++ b/localstorage/localstorage.html
@@ -41,6 +41,14 @@
                 <p id="groceryList"></p>
             </div>
         </div>
+        <div class="associative">
+            <h2> Storing & Retrieving Associative Arrays</h2>
+            <!--make array of people with titles as keys push button to display, keep there until local storage is cleared-->
+        </div>
+        <div class="objects">
+                <h2> Storing & Retrieving Objects</h2>
+                <!--Student Object (from JS object fluency) same display method as above, but with person 1 display and person 2 display-->
+            </div>
     </div>
 
     <script src="scripts/simpledata.js"></script>
