--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 <div class="topic5 topics">
                         <h3>5</h3>
                         <p>Local Storage</p>
-                        <button><a href="#">Not Yet
+                        <button><a href="ingebrigtsen-jessica.github.io/localstorage/localstorage.html">Example
                                         Page</a></button>
-                        <button><a href="#">Not Yet
+                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/localstorage">Example
                                         Code</a></button>
                 </div>
                 <div class="topic6 topics">
